--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": ">=7.2.5",
         "laminas/laminas-code": "^3.4",
         "kuiper/serializer": "^0.6",
         "guzzlehttp/guzzle": "^7.0"
