--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=7.2.5",
-        "laminas/laminas-code": "^3.4",
+        "php": "^8.1",
+        "laminas/laminas-code": "^4.5",
         "kuiper/serializer": "^0.8",
         "guzzlehttp/guzzle": "^7.0"
     },
